syntax = "proto3";
package flux.auth;

service AuthService {
    rpc Join(JoinRequest) returns (JoinResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc Complete(CompleteRequest) returns (CompleteResponse);
    rpc Me(MeRequest) returns (MeResponse);
}

message JoinRequest {
    optional string email = 1;
}

message JoinResponse {
    optional string response = 1;
}

message CompleteRequest {
    optional string first_name = 101;
    optional string last_name = 102;
    optional string locale = 103;
    optional string credential = 104;
}

message CompleteResponse {
    optional string jwt = 1;
}

message LoginRequest {
    optional string request = 1;
}

message LoginResponse {
    optional string jwt = 1;
}

message MeRequest {
    optional string user_id = 1;
}

message MeResponse {
    optional User user = 1;

    message User {
        optional string user_id = 1;
        optional string first_name = 2;
        optional string last_name = 3;
        optional string name = 4;
        optional string abbr = 5;
        optional string color = 6;
    }
}
